# bench_docs

./: README.md  pyproject.toml
src/bench_chart/utility/: git.py
src/bench_docs/: dataframe.py  script.py  settings.py
src/bench_docs/media/: LineChart.py  summary_chart.py
src/bench_docs/parser/: google_benchmark.py  html_parser.py  parser.py
src/bench_docs/utility/: asserts.py  bokeh.py  dsl.py  file.py  git.py  units.py
src/bench_docs/widgets/: line_chart.py  summary_chart.py
tests/: git.py  run.py  settings.json
tests/data/debug/clang/: 0.1.json
tests/data/debug/msvc/: 0.1.json
tests/data/release/msvc/: 0.1.json
